attempt to fix overflowing text in table on mobile

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,15 @@ button {
 }
 .Interests {
   background-color: lightblue;
+  font-size: 1rem;
+}
+
+.Interests_column {
+  display: flex;
+  flex-wrap: wrap;
+  word-break: break-word;
+  text-align: center;
+  justify-content: center;
 }
 
 .Projects-container {
